Revert "升级到 jdk19, 增加开关插件功能 (待重构完善), 升级 gradle"