@@ -9,22 +9,12 @@ buildscript {
 
 plugins {
     kotlin("jvm") version "1.7.10"
-    id("java")
-}
-
-subprojects {
-    apply(plugin = "org.jetbrains.kotlin.jvm")
-    apply(plugin = "java")
 }
 
 allprojects {
     group = "com.erzbir.numeron"
 
     version = "1.0.0"
-
-    val javaVersion = JavaVersion.VERSION_19
-
-    var jvmArgsList = listOf("--enable-preview")
 
     repositories {
         mavenLocal()
@@ -36,11 +26,10 @@ allprojects {
 
     tasks.withType<JavaCompile> {
         options.encoding = "UTF-8"
-        options.compilerArgs = jvmArgsList
 
         java {
-            sourceCompatibility = javaVersion
-            targetCompatibility = javaVersion
+            sourceCompatibility = JavaVersion.VERSION_17
+            targetCompatibility = JavaVersion.VERSION_17
         }
     }
 
@@ -50,17 +39,7 @@ allprojects {
         }
     }
 
-    tasks.withType<JavaExec> {
-        jvmArgs = jvmArgsList
-    }
-
-
-    tasks.withType<Wrapper> {
-        gradleVersion = "8.0"
-    }
-
     tasks.withType<Test> {
         useJUnitPlatform()
-        jvmArgs = jvmArgsList
     }
 }
